<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Screen_background"
    tools:context=".ui.ResultActivity">

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/bmiChart"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.069"
        android:background="@drawable/unit_bg"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/bmiCategoryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="102dp"
        android:text="@string/bmi_category"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmiChart"
        app:layout_constraintVertical_bias="0.048"
        android:textColor="@color/text"/>


    <RelativeLayout
        android:id="@+id/btn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bmiCategoryTextView"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/btn_under_Weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/under_weight"
            android:backgroundTint="@color/result_btn"
            android:background="@drawable/unit_bg"/>

        <Button
            android:id="@+id/btn_normal_Weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/normal_weight"
            android:backgroundTint="@color/result_btn"
            android:background="@drawable/unit_bg"
            />
        <Button
            android:id="@+id/btn_over_Weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/over_weight"
            android:backgroundTint="@color/result_btn"
            android:background="@drawable/unit_bg" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_Recalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_color"
        android:text="@string/recalculate"
        android:textSize="15sp"
        android:fontFamily="@font/inter_black"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/btn_layout"/>


</androidx.constraintlayout.widget.ConstraintLayout>