<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Screen_background"
    tools:context=".ui.MainScreen">

    <ImageView
        android:id="@+id/menu_bar"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:src="@drawable/density_medium"
        app:layout_constraintBottom_toTopOf="@+id/bmiTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.707" />


    <TextView
        android:id="@+id/bmiTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/BMI"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/genderTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textColor="@color/text"
        android:textSize="15sp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/bmiTextView"/>

    <LinearLayout
        android:id="@+id/gender_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/genderTextView">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_male"
            android:layout_width="@dimen/card_width"
            android:layout_height="@dimen/card_height"
            android:layout_marginStart="@dimen/card_margin_start"
            app:cardBackgroundColor="@color/card_color"
            app:cardCornerRadius="@dimen/card_corner_radius"
            android:foreground="?android:attr/selectableItemBackground">

            <ImageView
                android:id="@+id/male_selection"
                android:layout_width="17dp"
                android:layout_height="16dp"
                android:layout_gravity="end"
                android:layout_margin="10dp"
                android:background="@drawable/dot"/>

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="110dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/male_iv"
                    android:layout_width="50dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/man" />

                <TextView
                    android:layout_width="35dp"
                    android:layout_height="18dp"
                    android:layout_marginStart="35dp"
                    android:text="@string/male"
                    android:textColor="@color/text"
                    android:textSize="15sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_female"
            android:layout_width="100dp"
            android:layout_height="110dp"
            android:layout_marginStart="85dp"
            app:cardBackgroundColor="@color/card_color"
            app:cardCornerRadius="20dp"
            android:foreground="?android:attr/selectableItemBackground">

            <ImageView
                android:id="@+id/female_selection"
                android:layout_width="17dp"
                android:layout_height="16dp"
                android:layout_gravity="end"
                android:layout_margin="10dp"
                android:background="@drawable/dot" />

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="110dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/female_iv"
                    android:layout_width="50dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/woman" />

                <TextView
                    android:layout_width="52dp"
                    android:layout_height="@dimen/text_height"
                    android:layout_marginStart="25dp"
                    android:text="@string/female"
                    android:textColor="@color/text"
                    android:textSize="15sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
    <TextView
        android:id="@+id/weight_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:textColor="@color/text"
        android:textSize="15sp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/gender_layout"/>
    <LinearLayout
        android:id="@+id/layout_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/weight_tv">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@drawable/weight_bg"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="30dp">

            <ImageButton
                android:id="@+id/weightDecrease"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/remove"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edit_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:paddingTop="2dp"
                android:hint="0"
                android:textColor="@color/edit_text"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/weight_increase"
                app:layout_constraintStart_toEndOf="@id/weightDecrease"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/weight_increase"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="75dp"
            android:layout_height="30dp"
            android:text="@string/kg"
            android:background="@drawable/unit_bg"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginEnd="20dp"
            android:textColor="@color/edit_text"
            android:textSize="15sp"/>

    </LinearLayout>
    <TextView
        android:id="@+id/height_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:textColor="@color/text"
        android:textSize="15sp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/layout_weight"/>
    <LinearLayout
        android:id="@+id/layout_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/height_tv">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@drawable/weight_bg"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="30dp">

            <ImageButton
                android:id="@+id/tv_height_decrease"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/remove"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/tv_Height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:paddingTop="2dp"
                android:hint="0"
                android:inputType="number"
                android:textColor="@color/edit_text"
                android:textSize="15sp"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tv_height_increase"
                app:layout_constraintStart_toEndOf="@+id/tv_height_decrease"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/tv_height_increase"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="75dp"
            android:layout_height="30dp"
            android:text="@string/m"
            android:background="@drawable/unit_bg"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginEnd="20dp"
            android:textColor="@color/edit_text"
            android:textSize="15sp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/age_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textColor="@color/text"
        android:textSize="15sp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@id/layout_height"/>

    <LinearLayout
        android:id="@+id/layout_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/age_tv">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@drawable/weight_bg"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="30dp">

            <ImageButton
                android:id="@+id/age_decrease"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/remove"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edt_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:inputType="number"
                android:paddingTop="2dp"
                android:textColor="@color/edit_text"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/age_increase"
                app:layout_constraintStart_toEndOf="@+id/age_decrease"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageButton
                android:id="@+id/age_increase"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_color"
        android:text="@string/calculate"
        android:textSize="15sp"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/layout_age"/>




</androidx.constraintlayout.widget.ConstraintLayout>
